# pluto

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env
.github/workflows/: docker-image.yml  docs.yml  rust.yml
backup/: Cargo.toml
backup/src/: lib.rs
backup/src/pack/: blob_index.rs  blob_index_tests.rs  mod.rs  packfile_handler.rs  packfile_handler_tests.rs
backup/tests/: blob_index_tests.rs  packfile_handler_tests.rs
cli/: Cargo.toml
cli/src/: main.rs
coordinator/: Cargo.toml
coordinator/migrations/2022-06-04-192729_init/: down.sql  up.sql
coordinator/migrations/2022-06-06-144928_add_session_schema/: down.sql  up.sql
coordinator/src/: coordinator.rs  main.rs
coordinator/src/db/: mod.rs  schema.rs
coordinator/src/db/models/: backup_job.rs  mod.rs  node.rs  node_session.rs  node_storage_mapping.rs
coordinator/src/handlers/: auth.rs  backup_job.rs  backup_job_list.rs  backup_job_put.rs  mod.rs
coordinator/src/logic/: auth.rs  backup_job.rs  keygen.rs  mod.rs
crates/backup/: Cargo.toml
crates/backup/src/pack/: blob_index.rs  packfile_handler.rs
crates/backup/tests/: blob_index_tests.rs
crates/cli/: Cargo.toml
crates/coordinator/: Cargo.toml
crates/coordinator/migrations/2022-06-04-192729_init/: down.sql
crates/coordinator/migrations/2022-06-06-144928_add_session_schema/: down.sql  up.sql
crates/coordinator/src/: coordinator.rs  main.rs
crates/coordinator/src/db/: mod.rs
crates/coordinator/src/db/models/: backup_job.rs  node_session.rs  node_storage_mapping.rs
crates/coordinator/src/handlers/: auth.rs  backup_job_list.rs  backup_job_put.rs  mod.rs
crates/coordinator/src/logic/: mod.rs
crates/macros/src/: topics.rs
crates/network/: Cargo.toml  build.rs
crates/network/src/: client.rs  lib.rs  message.rs  utils.rs
crates/network/src/key/: seed.rs
crates/network/src/protos/: auth.proto
crates/network/src/topics/: backup_job.rs
crates/node/: Cargo.toml
crates/node-service-web/frontend/: README.md  package.json
crates/node-service-web/frontend/src/: constants.ts  main.ts
crates/node-service-web/frontend/src/components/: BackupJob.vue
crates/node-service-web/frontend/src/router/: index.ts
crates/node-service-web/frontend/src/stores/: jobs.ts
crates/node-service-web/frontend/src/views/: BackupJobNew.vue
crates/node-service-web/src/api/: filters.rs  mod.rs
crates/node-service-web/src/api/routes/: backup_job.rs  node.rs  setup.rs  status.rs
crates/node/migrations/2022-06-20-151632_backup_jobs/: down.sql
crates/node/migrations/2022-08-16-185158_node/: down.sql
crates/node/src/: auth.rs  backup_job.rs  lib.rs  node.rs  utils.rs
crates/node/src/db/: schema.rs
crates/node/src/db/models/: backup_job_path.rs  mod.rs
crates/node/src/handlers/: mod.rs
crates/utils/src/: lib.rs  linked_list.rs
graphics/source/: base.xcf  github.xcf  icon.xcf
gui/: Cargo.toml
gui/src/: main.rs
gui/src/api/: filters.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs  reject.rs  topics.rs
mosquitto_configs/: acl.conf  mosquitto.conf  passwd.conf
network/: Cargo.toml  build.rs
network/src/: client.rs  handler.rs  lib.rs  message.rs  topics.rs
network/src/challenge/: pow.rs
network/src/coordinator/: mod.rs  topics.rs
network/src/key/: mod.rs
network/src/node/: mod.rs
network/src/node/key/: mnemonic.rs  mod.rs  seed.rs
network/src/node/key/wordlists/: english.txt
network/src/protos/: _status.proto  auth.proto  backup_job.proto  shared.proto
network/src/topics/: auth.rs  backup_job.rs  mod.rs
node/: Cargo.toml
node-service-web/: Cargo.toml
node-service-web/frontend/: index.html  package-lock.json  package.json
node-service-web/frontend/src/: App.vue
node-service-web/frontend/src/assets/: boostrap-icons.scss
node-service-web/frontend/src/components/: BackupJob.vue  Overview.vue  Setup.vue
node-service-web/frontend/src/router/: index.ts
node-service-web/frontend/src/stores/: jobs.ts  nodes.ts
node-service-web/frontend/src/views/: BackupJobEdit.vue  BackupJobs.vue  HomeView.vue  Nodes.vue
node-service-web/src/: main.rs
node-service-web/src/api/: filters.rs  mod.rs
node-service-web/src/api/routes/: backup_job.rs  mod.rs  setup.rs  status.rs
node-service-web/static/: index.html
node/migrations/2022-06-12-135235_init/: down.sql  up.sql
node/migrations/2022-06-20-151632_backup_jobs/: up.sql
node/migrations/2022-08-16-185158_node/: up.sql
node/src/: auth.rs  backup_job.rs  config.rs  lib.rs  node.rs  utils.rs
node/src/db/: mod.rs  schema.rs
node/src/db/models/: backup_job.rs  backup_job_path.rs  blob_storage.rs  mod.rs  node.rs
node/src/handlers/: mod.rs
specification/: book.toml
specification/src/: SUMMARY.md  introduction.md
specification/src/dev_guide/: building.md  source_structure.md
specification/src/dev_guide/network/: overview.md
utils/: Cargo.toml
utils/src/: bits.rs  lib.rs  linked_list.rs  tree.rs
