[package]
name = "pluto-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-network = { path = "../network" }

# Database
sea-orm = "0.8.0"

# Async
tokio = { version = "1.18.2", features = [ "rt-multi-thread", "macros", "sync", "signal" ] }

# Logging
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "local-time", "parking_lot" ] }