[package]
name = "pluto-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-network = { path = "../network" }

# Database
diesel = { version = "1.4.8", features = [ "postgres", "chrono" ] }
deadpool-diesel = { version = "0.3.1", features = [ "postgres" ] }
diesel_migrations = "1.4.0"

# Async
tokio = { version = "1.18.2", features = [ "rt-multi-thread", "macros", "sync", "signal" ] }

# Logging
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "local-time", "parking_lot" ] }

# Utils
dotenv = "0.15.0"
chrono = "0.4.19"
thiserror = "1.0.31"