[package]
name = "pluto-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-network = { path = "../network" }
pluto-node = { path = "../node" }

# Async
tokio = { version = "1", features = ["full"] }

# API
warp = "0.3"

# Logging
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "local-time", "parking_lot" ] }
