[package]
name = "pluto-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-macros = { path = "../macros" }
pluto-utils = { path = "../utils" }

# Networking
rumqttc = "0.12.0"
protobuf = "3.0.3"

# Logging
tracing = "0.1.34"

# Cryptography
ring = "0.16.20"
rand_chacha = "0.3.1"
getrandom = "0.2.6"

# Utils
thiserror = "1.0.31"
lazy_static = "1.4.0"

[build-dependencies]
protobuf-codegen = "3.0.3"
