[package]
name = "pluto-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-macros = { path = "../macros" }
pluto-utils = { path = "../utils" }

# Networking
rumqttc = "0.12.0"
protobuf = { version = "3.0.3", features = [ "with-bytes" ] }

# Logging
tracing = "0.1.34"

# Cryptography
ring = "0.16.20"
rand_chacha = "0.3.1"
getrandom = "0.2.6"

# Utils
thiserror = "1.0.31"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
tokio = { version = "1.19.2", features = [ "sync" ] }
bytes = "1.1.0"
regex = "1.5.6"
async-trait = "0.1.56"

[build-dependencies]
protobuf-codegen = "3.0.3"
