[package]
name = "pluto-node-service-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-network = { path = "../network" }
pluto-node = { path = "../node" }
pluto-macros = { path = "../macros" }

# Async
tokio = { version = "1", features = ["full"] }

# API
warp = "0.3"
rust-embed = { version = "6.4.0", features = ["compression"] }
mime_guess = "2.0.4"

# Serialization
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
hex = "0.4.3"

# Cryptography
sha2 = "0.10.2"

# Logging
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = [ "local-time", "parking_lot" ] }
