[package]
name = "pluto-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pluto-network = { path = "../network" }

# Database
diesel = { version = "1.4.8", features = [ "sqlite", "chrono" ] }
diesel_migrations = "1.4.0"

# Logging
tracing = "0.1.34"

# Utils
lazy_static = "1.4.0"
async-trait = "0.1.56"
dirs = "4.0.0"
